[tool.poetry]
name = "cloudflare-purge-action"
version = "0.0.1"
description = "A GitHub Action to purge CloudFlare zone cache"
authors = ["Alex Orfanos <alexandros@mailerlite.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
